--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
         <meta charset="utf-8">
-        <title>test</title>
+        <title>ハコダテソラカメラ Webサイト</title>
         <link rel="stylesheet" href="css/style.css" media="all" />
 </head>
 <body>
