--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <html>
-<head>
-        <meta charset="utf-8">
-        <title>ハコダテソラカメラ Webサイト</title>
-        <link rel="stylesheet" href="css/style.css" media="all" />
-</head>
-<body>
-
-</body>
+	<head>
+	        <meta charset="utf-8">
+	        <title>ハコダテソラカメラ Webサイト</title>
+	        <link rel="stylesheet" href="css/style.css" media="all" />
+	</head>
+	<body>
+		<header>
+			<div class="bgl">
+				<nav>
+					<img src="img/title.png">
+					<ul>
+						<li>Services</li>
+						<li>Work</li>
+						<li>About</li>
+						<li>Contents</li>
+					</ul>
+				</nav>
+				<p>魅力を映像で伝える。</p>
+				<div class="more">MORE</div>
+			</div>
+		</header>
+	</body>
 </html> 
