start making SERVICES

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<header>
 			<div class="bgl">
 				<nav>
-					<img src="img/title.png">
+					<object data="img/shironuki-02.svg" type="image/svg+xml"></object>
 					<ul>
 						<li>Services</li>
 						<li>Work</li>
@@ -17,8 +17,26 @@
 					</ul>
 				</nav>
 				<p>魅力を映像で伝える。</p>
-				<div class="more">MORE</div>
+				<div id="more">MORE</div>
 			</div>
 		</header>
+		<div id="services" class="b">
+			<h1>SERVICES</h1>
+			<div class="service">
+				<object data="img/movie11.svg" type="image/svg+xml"></object>
+				<h2>撮影</h2>
+				<p>ここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
+			</div>
+			<div class="service">
+				<object data="img/screen121.svg" type="image/svg+xml"></object>
+				<h2>編集</h2>
+				<p>ここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
+			</div>
+			<div class="service">
+				<object data="img/map-pointer2.svg" type="image/svg+xml"></object>
+				<h2>西部地区</h2>
+				<p>ここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
+			</div>
+		</div>
 	</body>
 </html> 
