--- a/index.html
+++ b/index.html
@@ -1,42 +1,44 @@
 <html>
-	<head>
-	        <meta charset="utf-8">
-	        <title>ハコダテソラカメラ Webサイト</title>
-	        <link rel="stylesheet" href="css/style.css" media="all" />
-	</head>
-	<body>
-		<header>
-			<div class="bgl">
-				<nav>
-					<object data="img/shironuki-02.svg" type="image/svg+xml"></object>
-					<ul>
-						<li>Services</li>
-						<li>Work</li>
-						<li>About</li>
-						<li>Contents</li>
-					</ul>
-				</nav>
-				<p>魅力を映像で伝える。</p>
-				<div id="more">MORE</div>
-			</div>
-		</header>
-		<div id="services" class="b">
-			<h1>SERVICES</h1>
+<head>
+	<meta charset="utf-8">
+	<title>ハコダテソラカメラ Webサイト</title>
+	<link rel="stylesheet" href="css/style.css" media="all" />
+</head>
+<body>
+	<header>
+		<div class="bgl">
+			<nav>
+				<object data="img/shironuki-02.svg" type="image/svg+xml"></object>
+				<ul>
+					<li>Services</li>
+					<li>Work</li>
+					<li>About</li>
+					<li>Contents</li>
+				</ul>
+			</nav>
+			<p>魅力を映像で伝える。</p>
+			<div id="more">MORE</div>
+		</div>
+	</header>
+	<div id="services" class="b">
+		<h1>SERVICES</h1>
+		<div class="center">
 			<div class="service">
-				<object data="img/movie11.svg" type="image/svg+xml"></object>
+				<object data="img/film.svg" type="image/svg+xml"></object>
 				<h2>撮影</h2>
 				<p>ここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
 			</div>
 			<div class="service">
-				<object data="img/screen121.svg" type="image/svg+xml"></object>
+				<object data="img/edit.svg" type="image/svg+xml"></object>
 				<h2>編集</h2>
 				<p>ここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
 			</div>
 			<div class="service">
-				<object data="img/map-pointer2.svg" type="image/svg+xml"></object>
+				<object data="img/west.svg" type="image/svg+xml"></object>
 				<h2>西部地区</h2>
 				<p>ここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
 			</div>
 		</div>
-	</body>
+	</div>
+</body>
 </html> 
