fix services p, make works

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" href="css/style.css" media="all" />
 </head>
 <body>
+
 	<header>
 		<div class="bgl">
 			<nav>
@@ -20,25 +21,47 @@
 			<div id="more">MORE</div>
 		</div>
 	</header>
+
 	<div id="services" class="b">
 		<h1>SERVICES</h1>
-		<div class="center">
-			<div class="service">
-				<object data="img/film.svg" type="image/svg+xml"></object>
-				<h2>撮影</h2>
-				<p>ここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
-			</div>
-			<div class="service">
-				<object data="img/edit.svg" type="image/svg+xml"></object>
-				<h2>編集</h2>
-				<p>ここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
-			</div>
-			<div class="service">
-				<object data="img/west.svg" type="image/svg+xml"></object>
-				<h2>西部地区</h2>
-				<p>ここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
-			</div>
+		<div class="service">
+			<object data="img/film.svg" type="image/svg+xml"></object>
+			<h2>撮影</h2>
+			<p>ここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
 		</div>
+		<div class="service">
+			<object data="img/edit.svg" type="image/svg+xml"></object>
+			<h2>編集</h2>
+			<p>ここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
+		</div>
+		<div class="service">
+			<object data="img/west.svg" type="image/svg+xml"></object>
+			<h2>西部地区</h2>
+			<p>ここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
+		</div>
+	</div>
+
+	<div id="works" class="b">
+		<h1>WORKS</h1>
+		<div class="work">
+			<a href="#">
+				<img src="img/work-1.jpg">
+			</a>
+		</div>
+		<div class="work">
+			<a href="#">
+				<img src="img/work-2.jpg">
+			</a>
+		</div>
+		<div class="work comming">
+			<a href="#">
+				<img src="img/work-2.jpg">
+			</a>
+		</div>
+	</div>
+
+	<div id="about" class="b">
+		<h1>ABOUT</h1>
 	</div>
 </body>
 </html> 
