comp making work

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 	<meta charset="utf-8">
 	<title>ハコダテソラカメラ Webサイト</title>
 	<link rel="stylesheet" href="css/style.css" media="all" />
+
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+	<script type="text/javascript" src="js/jquery.smoothScroll.js"></script>
+	<script type="text/javascript" src="js/scroll_show.js"></script>
 </head>
 <body>
 
@@ -22,6 +26,16 @@
 		</div>
 	</header>
 
+	<div id="nav">
+		<object data="img/Soracam_Logo.svg" type="image/svg+xml"></object>
+				<ul>
+					<li>Services</li>
+					<li>Work</li>
+					<li>About</li>
+					<li>Contents</li>
+				</ul>
+	</div>
+	
 	<div id="services" class="b">
 		<h1>SERVICES</h1>
 		<div class="service">
@@ -41,27 +55,40 @@
 		</div>
 	</div>
 
+	<div class="sep"></div>
+
 	<div id="works" class="b">
 		<h1>WORKS</h1>
 		<div class="work">
 			<a href="#">
 				<img src="img/work-1.jpg">
+				<p><span>作品名</span>
+					<br>この作品を一言で</p>
 			</a>
 		</div>
 		<div class="work">
 			<a href="#">
 				<img src="img/work-2.jpg">
+				<p><span>作品名</span>
+					<br>この作品を一言で</p>
 			</a>
 		</div>
 		<div class="work comming">
 			<a href="#">
 				<img src="img/work-2.jpg">
+				<p>comming soon</p>
 			</a>
 		</div>
 	</div>
 
+	<div class="sep"></div>
+
 	<div id="about" class="b">
 		<h1>ABOUT</h1>
 	</div>
+
+	<footer>
+		<p>©2015 - All right reserved</p>
+	</footer>
 </body>
 </html> 
