--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 	<script type="text/javascript" src="js/scroll_show.js"></script>
 </head>
 <body>
-
 	<header>
+		<video src="movie/webmovie.mp4" autoplay loop>
+			<p>動画を再生するにはvideoタグをサポートしたブラウザが必要です。</p>
+		</video>
 		<div class="bgl">
 			<nav>
 				<object data="img/shironuki-02.svg" type="image/svg+xml"></object>
