--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
 	<header>
-		<video src="movie/webmovie.mp4" autoplay loop>
+		<video src="movie/webmovie.mp4" autoplay loop id="video">
 			<p>動画を再生するにはvideoタグをサポートしたブラウザが必要です。</p>
 		</video>
 		<div class="bgl">
 			<nav>
 				<object data="img/shironuki-02.svg" type="image/svg+xml"></object>
 				<ul>
-					<li>Services</li>
+					<!--<li>Services</li>-->
 					<li>Work</li>
 					<li>About</li>
 					<li>Contents</li>
@@ -31,33 +31,12 @@
 	<div id="nav">
 		<object data="img/Soracam_Logo.svg" type="image/svg+xml"></object>
 				<ul>
-					<li>Services</li>
+					<!--<li>Services</li>-->
 					<li>Work</li>
 					<li>About</li>
 					<li>Contents</li>
 				</ul>
 	</div>
-	
-	<div id="services" class="b">
-		<h1>SERVICES</h1>
-		<div class="service">
-			<object data="img/film.svg" type="image/svg+xml"></object>
-			<h2>撮影</h2>
-			<p>ここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
-		</div>
-		<div class="service">
-			<object data="img/edit.svg" type="image/svg+xml"></object>
-			<h2>編集</h2>
-			<p>ここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
-		</div>
-		<div class="service">
-			<object data="img/west.svg" type="image/svg+xml"></object>
-			<h2>西部地区</h2>
-			<p>ここにテキストが入りますここにテキストが入りますここにテキストが入ります</p>
-		</div>
-	</div>
-
-	<div class="sep"></div>
 
 	<div id="works" class="b">
 		<h1>WORKS</h1>
