--- a/index.html
+++ b/index.html
@@ -10,35 +10,33 @@
 </head>
 <body>
 	<header>
-		<video src="movie/webmovie.mp4" autoplay loop id="video">
+		<video src="movie/webmovie.mp4" autoplay loop muted id="video">
 			<p>動画を再生するにはvideoタグをサポートしたブラウザが必要です。</p>
 		</video>
 		<div class="bgl">
 			<nav>
 				<object data="img/shironuki-02.svg" type="image/svg+xml"></object>
 				<ul>
-					<!--<li>Services</li>-->
-					<li>Work</li>
-					<li>About</li>
-					<li>Contents</li>
+					<a href=#Works><li>Works</li></a>
+					<a href=#About><li>About</li></a>
+					<a href=#Contact><li>Contact</li></a>
 				</ul>
 			</nav>
 			<p>魅力を映像で伝える。</p>
-			<div id="more">MORE</div>
+			<a id="button" href=#Works><div id="more">MORE</div></a>
 		</div>
 	</header>
 
 	<div id="nav">
 		<object data="img/Soracam_Logo.svg" type="image/svg+xml"></object>
 				<ul>
-					<!--<li>Services</li>-->
-					<li>Work</li>
-					<li>About</li>
-					<li>Contents</li>
+					<a href=#Works><li>Works</li></a>
+					<a href=#About><li>About</li></a>
+					<a href=#Contact><li>Contact</li></a>
 				</ul>
 	</div>
-
-	<div id="works" class="b">
+	<center>
+	<div id="Works" class="b">
 		<h1>WORKS</h1>
 		<div class="work">
 			<a href="#">
@@ -62,12 +60,75 @@
 		</div>
 	</div>
 
-	<div class="sep"></div>
+	<div id="About" class="sep"></div>
 
-	<div id="about" class="b">
+	<div id="a" class="b">
 		<h1>ABOUT</h1>
+		<div class="left_c">
+			<h3>できることは映像を作ること</h3>
+			<div id="self_intro">
+				<p>私たちは、公立はこだて未来大学の学生9人で結成された映像制作プロジェクトです。このプロジェクトは、3年次全員必修の『プロジェクト学習』の一環であり、実社会に根ざした課題を解決していく方法を探求しています。</p>
+				<p>「西部地区の魅力を映像で伝える」をテーマとし、5月から活動を始めています。絵コンテ、シナリオ、撮影、編集のような映像制作技術を一通り学んでいます。その場所やモノの魅力を最大限活かすことのできる映像を提供します。</p>
+			</div>
+		</div>
+		<div class="right_c">
+			<p class="cont">ハコダテソラカメラプロジェクト</p>
+			<p class="english">Project13. Hakodate Soracamera</p>
+		</div>
+		<div class="right_c">
+			<p class="cont">所在地</p>
+			<p class="cont">〒041-8655 北海道函館市亀田中野町116番地2</p>
+			<p class="english">116-2 Kamedanakano-cho, Hakodate, Hokkaido, Japan 041-8655</p>
+		</div>
+		<div class="right_c">
+			<p class="cont">メンバー</p>
+			<div class="member">
+				<p class="cont">平間友大</p>
+				<p class="english">Yudai Hirama</p>
+			</div>
+			<div class="member">
+				<p class="cont">遠藤礼奈</p>
+				<p class="english">Ayana Endo</p>
+			</div>
+			<div class="member">
+				<p class="cont">奥村美奈代</p>
+				<p class="english">Minayo Okumura</p>
+			</div>
+			<div class="member">
+				<p class="cont">小田島慧</p>
+				<p class="english">Kei Odashima</p>
+			</div>
+			<div class="member">
+				<p class="cont">川島奨大</p>
+				<p class="english">Shota Kawashima</p>
+			</div>
+			<div class="member">
+				<p class="cont">桑野夏岐</p>
+				<p class="english">Natuki Kuwano</p>
+			</div>
+			<div class="member">
+				<p class="cont">島脇萌夏</p>
+				<p class="english">Moena Shimawaki</p>
+			</div>
+			<div class="member">
+				<p class="cont">手塚奈央</p>
+				<p class="english">Nao Tezuka</p>
+			</div>
+			<div class="member">
+				<p class="cont">山内雅貴</p>
+				<p class="english">Aki Yamauchi</p>
+			</div>
+		</div>
 	</div>
 
+	<div id="Contact" class="sep"></div>
+
+	<div id="c" class="b">
+		<h1>CONTACT</h1>
+		<p>函館ソラカメラプロジェクトに対しての質問など、お気軽にお問い合わせください。</p>
+		<p class="mail">soracam2015@<span class="hide">null</span>gmail.com</p>
+	</div>
+	</center>
 	<footer>
 		<p>©2015 - All right reserved</p>
 	</footer>
