start making angle

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 	<div id="Works" class="b">
 		<h1>WORKS</h1>
 		<div class="work">
-			<a href="#">
+			<a href="angle.html">
 				<img src="img/work-1.jpg">
-				<p><span>作品名</span>
-					<br>この作品を一言で</p>
+				<p><span>Angle</span>
+					<br>様々な視点で西部地区を見る</p>
 			</a>
 		</div>
 		<div class="work">
