--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@
 		<h1>WORKS</h1>
 		<div class="work">
 			<a href="angle.html">
-				<img src="img/work-1.jpg">
-				<p><span>Angle</span>
+				<img src="img/angle.jpg">
+				<p><span>「Angle」</span>
 					<br>様々な視点で西部地区を見る</p>
 			</a>
 		</div>
 		<div class="work">
-			<a href="#">
-				<img src="img/work-2.jpg">
-				<p><span>作品名</span>
-					<br>この作品を一言で</p>
+			<a href="saka.html">
+				<img src="img/saka.jpg">
+				<p><span>「坂」</span>
+					<br>坂の歴史をたどる</p>
 			</a>
 		</div>
 		<div class="work comming">
 			<a href="#">
-				<img src="img/work-2.jpg">
+				<img src="img/logo.jpg">
 				<p>comming soon</p>
 			</a>
 		</div>
