--- a/angle.html
+++ b/angle.html
@@ -10,6 +10,7 @@
 <body>
 	<div id="nav" class="d">
 		<object data="img/Soracam_Logo.svg" type="image/svg+xml"></object>
+		<p>Work - angle</p>
 				<ul>
 					<a href=index.html#Works><li>Works</li></a>
 					<a href=index.html#About><li>About</li></a>
@@ -17,6 +18,37 @@
 				</ul>
 	</div>
 	<div class="blank60"></div>
+	<div class="m_main">
+		<div class="video l">
+			<video src="movie/angle.mp4" controls poster="img/angle.jpg">
+				<p>動画を再生するにはvideoタグをサポートしたブラウザが必要です。</p>
+			</video>
+		</div>
+		<div class="info r">
+			<h1>「Angle」</h1>
+			<p class="m_theme">様々な視点で西部地区を見る</p>
+			<p>コンセプトは「様々な生き物の視点」。ビー玉視点で物語が展開し、猫やカラスなど様々な視点で西部地区を撮影。期間は2週間で制作し、9人の初めて作った映像作品。一通りの映像制作プロセスを学んだ。</p>
+		</div>
+	</div>
+	<div class="point">
+		<div class="pic l">
+			<img src="img/1-1.jpg" class="l">
+			<img src="img/1-2.jpg" class="r">
+		</div>
+		<div class="exp r">
+			<p>ビー玉が坂を転がるカットを撮影するために、トイレットペーパーの芯を加工したものにGoProをはめ込んだ。それらを転がすことで、転がったビー玉視点の撮影を行うことができた。</p>
+		</div>
+	</div>
+	<div class="point">
+		<div class="pic l">
+			<img src="img/1-3.jpg" class="l">
+			<img src="img/1-4.jpg" class="r">
+		</div>
+		<div class="exp r">
+			<p>動物目線の撮影をするため、猫は低く、鳥は高い位置で撮影。高位置の撮影かつ、鳥の飛行する時の視点をイメージしながら撮影しないといけないため何度も試行錯誤を重ねた。</p>
+		</div>
+	</div>
+
 	<footer>
 		<p>©2015 - All right reserved</p>
 	</footer>
