--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</video>
 		<div class="bgl">
 			<nav>
-				<object data="img/shironuki-02.svg" type="image/svg+xml"></object>
+				<object data="img/shironuki-02.svg"type="image/svg+xml"></object>
 				<ul>
 					<a href=#Works><li>Works</li></a>
 					<a href=#About><li>About</li></a>
@@ -28,12 +28,14 @@
 	</header>
 
 	<div id="nav">
-		<object data="img/Soracam_Logo.svg" type="image/svg+xml"></object>
-				<ul>
-					<a href=#Works><li>Works</li></a>
-					<a href=#About><li>About</li></a>
-					<a href=#Contact><li>Contact</li></a>
-				</ul>
+		<a href="#video" class="totop">
+			<img src="img/Soracam_Logo.svg" type="image/svg+xml">
+		</a>
+		<ul>
+			<a href=#Works><li>Works</li></a>
+			<a href=#About><li>About</li></a>
+			<a href=#Contact><li>Contact</li></a>
+		</ul>
 	</div>
 	<center>
 	<div id="Works" class="b">
