--- a/saka.html
+++ b/saka.html
@@ -9,7 +9,9 @@
 </head>
 <body>
 	<div id="nav" class="d">
-		<object data="img/Soracam_Logo.svg" type="image/svg+xml"></object>
+		<a href="index.html#Works" class="totop">
+			<img src="img/Soracam_Logo.svg" type="image/svg+xml">
+		</a>
 		<p>Work - angle</p>
 				<ul>
 					<a href=index.html#Works><li>Works</li></a>
