--- a/saka.html
+++ b/saka.html
@@ -3,9 +3,10 @@
 	<meta charset="utf-8">
 	<title>ハコダテソラカメラ Webサイト</title>
 	<link rel="stylesheet" href="css/style.css" media="all" />
-
+	<link rel="stylesheet" href="css/mobile.css" media="all" />
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/jquery.smoothScroll.js"></script>
+	<meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
 	<div id="nav" class="d">
@@ -45,7 +46,7 @@
 	<div class="point">
 		<div class="pic l">
 			<img src="img/2-3.jpg" class="l">
-			<!--<img src="img/2-4.jpg" class="r">-->
+			<img src="img/2-4.jpg" class="r">
 		</div>
 		<div class="exp r">
 			<p>After Effectsを用いたアニメーションに挑戦した。After Effects講習会で基礎を学び、編集班を中心に編集技術を身につけることができた。</p>
