--- a/angle.html
+++ b/angle.html
@@ -3,9 +3,10 @@
 	<meta charset="utf-8">
 	<title>ハコダテソラカメラ Webサイト</title>
 	<link rel="stylesheet" href="css/style.css" media="all" />
-
+	<link rel="stylesheet" href="css/mobile.css" media="all" />
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/jquery.smoothScroll.js"></script>
+	<meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
 	<div id="nav" class="d">
