--- a/angle.html
+++ b/angle.html
@@ -7,6 +7,17 @@
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/jquery.smoothScroll.js"></script>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-64971115-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body>
 	<div id="nav" class="d">
@@ -23,14 +34,12 @@
 	<div class="blank60"></div>
 	<div class="m_main">
 		<div class="video l">
-			<video src="movie/angle.mp4" controls poster="img/angle.jpg">
-				<p>動画を再生するにはvideoタグをサポートしたブラウザが必要です。</p>
-			</video>
+			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/AK7RCwoafu0?rel=0&showinfo=0&controls=2&rel=0" frameborder="0" allowfullscreen></iframe>
 		</div>
 		<div class="info r">
 			<h1>「Angle」</h1>
 			<p class="m_theme">様々な視点で西部地区を見る</p>
-			<p>コンセプトは「様々な生き物の視点」。ビー玉視点で物語が展開し、猫やカラスなど様々な視点で西部地区を撮影。期間は2週間で制作し、9人の初めて作った映像作品。一通りの映像制作プロセスを学んだ。</p>
+			<p>コンセプトは「様々な生き物の視点」。ビー玉視点で物語が展開し、猫やカラスなど様々な視点で西部地区を撮影。制作期間は2週間で、プロジェクトメンバー9人の初めての映像作品。一通りの映像制作プロセスを学んだ。</p>
 		</div>
 	</div>
 	<div class="point">
@@ -51,7 +60,15 @@
 			<p>動物目線の撮影をするため、猫は低く、鳥は高い位置で撮影。高位置の撮影かつ、鳥の飛行する時の視点をイメージしながら撮影しないといけないため何度も試行錯誤を重ねた。</p>
 		</div>
 	</div>
-
+	<div class="m_main">
+		<div class="video l">
+			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/CT7TJOdNgzw?rel=0&showinfo=0&controls=2&rel=0" frameborder="0" allowfullscreen></iframe>
+		</div>
+		<div class="info r">
+			<p class="m_theme">メイキングムービー</p>
+			<p>以上の工夫の様子が動画で見ることができます。</p>
+		</div>
+	</div>
 	<footer>
 		<p>©2015 - All right reserved</p>
 	</footer>
