--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 	<script type="text/javascript" src="js/jquery.smoothScroll.js"></script>
 	<script type="text/javascript" src="js/scroll_show.js"></script>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-64971115-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body id="top">
 	<header id="video">
@@ -72,7 +83,7 @@
 			<h3>できることは映像を作ること</h3>
 			<div id="self_intro">
 				<p>私たちは、公立はこだて未来大学の学生9人で結成された映像制作プロジェクトです。このプロジェクトは、3年次全員必修の『プロジェクト学習』の一環であり、実社会に根ざした課題を解決していく方法を探求しています。</p>
-				<p>「西部地区の魅力を映像で伝える」をテーマとし、5月から活動を始めています。絵コンテ、シナリオ、撮影、編集のような映像制作技術を一通り学んでいます。その場所やモノの魅力を最大限活かすことのできる映像を提供します。</p>
+				<p>「西部地区の魅力を映像で伝える」をテーマとし、2015年5月から活動を始めています。絵コンテ、シナリオ、撮影、編集のような映像制作技術を一通り学んでいます。その場所やモノの魅力を最大限活かすことのできる映像を提供します。</p>
 			</div>
 		</div>
 		<div class="right_c">
