--- a/saka.html
+++ b/saka.html
@@ -7,6 +7,17 @@
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/jquery.smoothScroll.js"></script>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-64971115-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body>
 	<div id="nav" class="d">
@@ -23,10 +34,7 @@
 	<div class="blank60"></div>
 	<div class="m_main">
 		<div class="video l">
-			<!--<video src="movie/angle.mp4" controls poster="img/saka.jpg">
-				<p>動画を再生するにはvideoタグをサポートしたブラウザが必要です。</p>
-			</video>-->
-			<p class="cs">Comming Soon</p>
+			
 		</div>
 		<div class="info r">
 			<h1>「坂」</h1>
