--- a/angle.html
+++ b/angle.html
@@ -34,7 +34,7 @@
 	<div class="blank60"></div>
 	<div class="m_main">
 		<div class="video l">
-			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/AK7RCwoafu0?rel=0&showinfo=0&controls=2&rel=0" frameborder="0" allowfullscreen></iframe>
+			<iframe src="https://www.youtube.com/embed/AK7RCwoafu0?rel=0&showinfo=0&controls=2&rel=0" frameborder="0" allowfullscreen></iframe>
 		</div>
 		<div class="info r">
 			<h1>「Angle」</h1>
@@ -62,7 +62,7 @@
 	</div>
 	<div class="m_main">
 		<div class="video l">
-			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/CT7TJOdNgzw?rel=0&showinfo=0&controls=2&rel=0" frameborder="0" allowfullscreen></iframe>
+			<iframe src="https://www.youtube.com/embed/CT7TJOdNgzw?rel=0&showinfo=0&controls=2&rel=0" frameborder="0" allowfullscreen></iframe>
 		</div>
 		<div class="info r">
 			<p class="m_theme">メイキングムービー</p>
