ファイル構成のリファクタリング

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 	<div id="c" class="b">
 		<h1>CONTACT</h1>
 		<p>函館ソラカメラプロジェクトに対しての質問など、お気軽にお問い合わせください。</p>
-		<p class="mail">soracam2015@<span class="hide">null</span>gmail.com</p>
+		<p class="mail">soracam2015@<span class="hide">spamclear</span>gmail.com</p>
 	</div>
 	</center>
 	<footer>
