--- a/prototype/index.html
+++ b/prototype/index.html
@@ -7,6 +7,7 @@
 <body>
 
 	<div id="menu">
+		<img src="img/logo.png" height="129" width="35" alt="">
 		<ul>
 			<li>Home</li>
 
@@ -45,5 +46,7 @@
 			<p>koko ni text ga hairimasu.koko ni text ga hairimasu.koko ni text ga hairimasu.koko ni text ga hairimasu.koko ni text ga hairimasu.koko ni text ga hairimasu.koko ni text ga hairimasu.koko ni text ga hairimasu.koko ni text ga hairimasu.</p>
 		</div>
 	</div>
+
+	
 </body>
 </html>
