fix margin, and fix misprint

--- a/angle.html
+++ b/angle.html
@@ -24,7 +24,7 @@
 		<a href="index.html#Works" class="totop">
 			<img src="img/Soracam_Logo.svg" type="image/svg+xml">
 		</a>
-		<p>Work - angle</p>
+		<p>Work - Angle</p>
 				<ul>
 					<a href=index.html#Works><li>Works</li></a>
 					<a href=index.html#About><li>About</li></a>
