make logo.html, change favicon

--- a/index.html
+++ b/index.html
@@ -69,9 +69,13 @@
 			</a>
 			<div class="bg"></div>
 		</div>
-		<div class="work comming">
-			<img src="img/logo.jpg">
-			<p>comming soon</p>
+		<div class="work logo">
+			<a href="logo.html">
+				<img src="img/logo.jpg" >
+				<p><span>「SORACAM」Logo</span>
+					<br>自分たちの目標のカタチ</p>
+			</a>
+			<div class="bg"></div>
 		</div>
 	</div>
 
