--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
 	<script type="text/javascript" src="js/scroll_show.js"></script>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
 
-  ga('create', 'UA-64971115-1', 'auto');
-  ga('send', 'pageview');
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-</script>
+	  ga('create', 'UA-64971115-1', 'auto');
+	  ga('send', 'pageview');
+
+	</script>
 </head>
 <body id="top">
 	<header id="video">
@@ -72,13 +74,14 @@
 		<div class="work logo">
 			<a href="logo.html">
 				<img src="img/logo.jpg" >
-				<p><span>「SORACAM」Logo</span>
+				<p><span>SORACAM Logo</span>
 					<br>自分たちの目標のカタチ</p>
 			</a>
 			<div class="bg"></div>
 		</div>
+		
 	</div>
-
+	
 	<div id="About" class="sep"></div>
 
 	<div id="a" class="b">
