--- a/logo.html
+++ b/logo.html
@@ -8,16 +8,18 @@
 	<script type="text/javascript" src="js/jquery.smoothScroll.js"></script>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
 
-  ga('create', 'UA-64971115-1', 'auto');
-  ga('send', 'pageview');
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-</script>
+	  ga('create', 'UA-64971115-1', 'auto');
+	  ga('send', 'pageview');
+
+	</script>
 </head>
 <body>
 	<div id="nav" class="d">
@@ -49,15 +51,17 @@
 			<p>直径の比がフィボナッチ数列になっている正円と、それに内接する正9角形を用いて構成した。大小2つの正9角形の頂点を正円でつなぎ、カメラの絞りを表現している。</p>
 		</div>
 	</div>
+
 	<div class="m_main">
-		<div class="video l">
-			<iframe src="https://www.youtube.com/embed/CT7TJOdNgzw?rel=0&showinfo=0&controls=2&rel=0" frameborder="0" allowfullscreen></iframe>
+		<div class="animeGif l">
+			<img src="img/logo-Anim.gif">
 		</div>
 		<div class="info r">
 			<p class="m_theme">Motion Logo</p>
 			<p>9人が1つに集まり、1つのモノが出来上がることを表現している。</p>
 		</div>
 	</div>
+
 	<footer>
 		<p>©2015 - All right reserved</p>
 	</footer>
