--- a/saka.html
+++ b/saka.html
@@ -8,7 +8,7 @@
 	<script type="text/javascript" src="js/jquery.smoothScroll.js"></script>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 
-	<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+	<link rel="apple-touch-icon" href="apple-touch-icon.png">
 
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
