fix logo layout

--- a/logo.html
+++ b/logo.html
@@ -41,19 +41,23 @@
 			<p>頂点の数がプロジェクトのメンバーの数と等しい9角形を用い、「9人の映像制作プロダクション」を表現した。モチーフはカメラの絞りで、絞り値が高くなると被写界深度が深くなる特性から「世界を広く見る」という意味も込めている。</p>
 			<p>フォントは「Optima」を使用した。サンセリフ体のシンプルで先進的なイメージを持ちながら、美しさと古風な印象を 持っているため「Optima」を採用した。</p>
 		</div>
-		<img src="img/logo-1.png" class="l">
-		<img src="img/logo-2.png" class="l">
-		<img src="img/logo-3.png" class="l">
+		<div class="pic l">
+			<img src="img/logo-1.png" class="long l">
+			<img src="img/logo-2.png" class="long l">
+			<img src="img/logo-3.png" class="long l">
+		</div>
 	</div>
 	<div class="point">
-		<img src="img/logo-4.png" class="long l">
+		<div class="pic l">
+			<img src="img/logo-4.png" class="long l">
+		</div>
 		<div class="exp r">
 			<p>直径の比がフィボナッチ数列になっている正円と、それに内接する正9角形を用いて構成した。大小2つの正9角形の頂点を正円でつなぎ、カメラの絞りを表現している。</p>
 		</div>
 	</div>
 
 	<div class="m_main">
-		<div class="animeGif l">
+		<div class="pic animeGif l">
 			<img src="img/logo-Anim.gif">
 		</div>
 		<div class="info r">
