make page, change img

--- a/denkenbututte.html
+++ b/denkenbututte.html
@@ -36,7 +36,8 @@
 	<div class="blank60"></div>
 	<div class="m_main">
 		<div class="video l">
-			<iframe src="https://www.youtube.com/embed/AK7RCwoafu0?rel=0&showinfo=0&controls=2&rel=0" frameborder="0" allowfullscreen></iframe>
+			<!--<iframe src="https://www.youtube.com/embed/AK7RCwoafu0?rel=0&showinfo=0&controls=2&rel=0" frameborder="0" allowfullscreen></iframe>-->
+			<img src="img/denkenbututte/top.png" class="temp_img">
 		</div>
 		<div class="info r">
 			<h1>「伝建物って？」</h1>
@@ -46,8 +47,8 @@
 	</div>
 	<div class="point">
 		<div class="pic l">
-			<img src="img/1-1.jpg" class="l">
-			<img src="img/1-2.jpg" class="r">
+			<img src="img/denkenbututte/camera.JPG" class="l">
+			<img src="img/denkenbututte/people.jpg" class="r">
 		</div>
 		<div class="exp r">
 			<p>函館市都市建設部まちづくり景観課と函館市伝統的建造物群保存会との協力を得ています。実際にインタビューをしたり現地での調査を重ね映像を制作しました。何度もプロトタイプを制作し作品のブラッシュアップを行いました。</p>
@@ -55,8 +56,8 @@
 	</div>
 	<div class="point">
 		<div class="pic l">
-			<img src="img/1-3.jpg" class="l">
-			<img src="img/1-4.jpg" class="r">
+			<img src="img/denkenbututte/movie.png" class="l">
+			<img src="img/denkenbututte/movie_2.png" class="r">
 		</div>
 		<div class="exp r">
 			<p>この映像は10月31日に行われた「2015でんけんコンサート」で上映されました。会場は伝統的建造物でもあるカトリック本町教会でした。当日は200を超える観客が来場し、伝統的建造物について市民が考えるきっかけを提供することができました。この映像は、今後も函館市が伝統的建造物を伝えるメディアとして活用されます。</p>
