--- a/index.html
+++ b/index.html
@@ -79,8 +79,16 @@
 			</a>
 			<div class="bg"></div>
 		</div>
+		<div class="work comming">
+			<!--<a href="denkenbututte.html">-->
+				<img src="img/denkenbututte/top.png">
+				<p><span><!--「伝建物って？」-->Comming Soon</span>
+					<br>伝統的建造物と人</p>
+			<!--</a>-->
+			<div class="bg"></div>
+		</div>
 	</div>
-	
+
 	<div id="About" class="sep"></div>
 
 	<div id="a" class="b">
