Revert "Merge branch 'master' into AddWorks"
This reverts commit 3a387dd4de17e4d87373c3b0466982233db6632c, reversing
changes made to 71120aac5d099e86691047973c20cc9a4ee644f2.

--- a/denkenbututte.html
+++ b/denkenbututte.html
@@ -41,7 +41,7 @@
 		</div>
 		<div class="info r">
 			<h1>「伝建物って？」</h1>
-			<p class="m_theme">建物と人</p>
+			<p class="m_theme">伝統的建造物と人</p>
 			<p>「伝建物って？」は、伝統的建造物とそこに関わる人に着目した映像作品です。函館市の魅力の一部である伝統的建造物がどのような人たちによって守られ活用されているかをドキュメンタリーにしたものです。2人の掛け合いにより物語が進行していきます。</p>
 		</div>
 	</div>
