--- a/stabilizer.html
+++ b/stabilizer.html
@@ -35,19 +35,19 @@
 	</div>
 	<div class="blank60"></div>
 	<div class="m_main">
-		<div class="video l">
-			<iframe src="https://www.youtube.com/embed/82kTNwCQpRc?rel=0&showinfo=0&controls=2&rel=0" frameborder="0" allowfullscreen></iframe>
-		</div>
 		<div class="info r">
 			<h1>スタビライザー</h1>
-			<p class="m_theme">動画のブレをなくす</p>
+			<p class="m_theme">映像のブレをなくす</p>
 			<p>スタビライザーとは、撮影者の手ぶれを軽減する装置です。センサを用いて、ブレとは反対の方向にモーターを動作させることで相殺することができます。この装置を、装置のハード面、ソフトウェア面から制作しました。</p>
+		</div>
+		<div class="pic l">
+			<img src="img/stabilizer1.JPG" alt="">
 		</div>
 	</div>
 	<div class="point">
 		<div class="pic l">
-			<img src="img/2-1.jpg" class="l">
-			<img src="img/2-2.jpg" class="r">
+			<img src="img/stabilizer2.jpg" class="l">
+			<img src="img/stabilizer3.jpg" class="r">
 		</div>
 		<div class="exp r">
 			<p>設計や仕様に関しては、Webサイトを参考にしました。回路が動作することをブレッドボード上で確認し、半田付けをしました。</p>
