スタビライザーを追加
スタビライザーのための項目を追加しました

--- a/index.html
+++ b/index.html
@@ -79,6 +79,14 @@
 			</a>
 			<div class="bg"></div>
 		</div>
+		<div class="work logo">
+			<a href="stabilizer.html">
+				<img src="img/stabilizer1.JPG" >
+				<p><span>スタビライザー</span>
+					<br>映像のブレをなくす</p>
+			</a>
+			<div class="bg"></div>
+		</div>
 		<div class="work comming">
 			<!--<a href="denkenbututte.html">-->
 				<img src="img/denkenbututte/top.png">
