リファクタリングしました
表示の改善と、それに伴いコードの可読性を高めるためリファクタリングを行いました

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			</a>
 			<div class="bg"></div>
 		</div>
-		<div class="work logo">
+		<div class="work img_l0 blackboader">
 			<a href="logo.html">
 				<img src="img/logo.jpg" >
 				<p><span>SORACAM Logo</span>
@@ -79,7 +79,7 @@
 			</a>
 			<div class="bg"></div>
 		</div>
-		<div class="work logo">
+		<div class="work img_l0">
 			<a href="stabilizer.html">
 				<img src="img/stabilizer1.JPG" >
 				<p><span>スタビライザー</span>
