個別ページ完成

--- a/saka_remake.html
+++ b/saka_remake.html
@@ -36,30 +36,30 @@
 	<div class="blank60"></div>
 	<div class="m_main">
 		<div class="video l">
-			<iframe src="https://www.youtube.com/embed/82kTNwCQpRc?rel=0&showinfo=0&controls=2&rel=0" frameborder="0" allowfullscreen></iframe>
+			<iframe src="https://www.youtube.com/embed/83_9jmZ1aXw?showinfo=0&controls=2&rel=0" frameborder="0" allowfullscreen></iframe>
 		</div>
 		<div class="info r">
-			<h1>「坂」 Remake</h1>
-			<p class="m_theme">坂の歴史をたどる</p>
-			<p>コンセプトは「歴史を伝える」。オムニバス形式で進行し、西部地区に数ある坂の中から幾つかピックアップし坂の持つ歴史を映像化した。プリパイロットフィルムでの経験をふまえ、それぞれが各役割につき制作にあたった。</p>
+			<h1>「坂」Remake</h1>
+			<p class="m_theme">実際に歩いてるような目線で坂を見せる</p>
+			<p>コンセプトは「坂歩き体験」前回つくった「坂」では坂の歴史を紹介したので、今回は坂そのものを見せていきたいと思い、制作を始めた。</p>
 		</div>
 	</div>
 	<div class="point">
 		<div class="pic l">
-			<img src="img/2-1.jpg" class="l">
-			<img src="img/2-2.jpg" class="r">
+			<img src="img/sakaR_a1.jpg" class="l">
+			<img src="img/sakaR_a2.jpg" class="r">
 		</div>
 		<div class="exp r">
-			<p>西部地区の魅力を探るため、ガイドマップを用いたフィールドワークや資料集めなど、積極的に西部地区の歴史に触れた。これらの活動から、坂という題材を得ることができた。調べた坂の由来や歴史をもとに、シナリオや絵コンテを作成した。</p>
+			<p>坂を歩きながら撮影するにあたり、スマートフォンの動画撮影、iphoneのタイムラプス撮影アプリなど様々なツールを試し、最終的には、スタビライザーでの撮影が最適であることにたどり着いた。</p>
 		</div>
 	</div>
 	<div class="point">
 		<div class="pic l">
-			<img src="img/2-3.jpg" class="l">
-			<img src="img/2-4.jpg" class="r">
+			<img src="img/sakaR_b1.jpg" class="l">
+			<img src="img/sakaR_b2.jpg" class="r">
 		</div>
 		<div class="exp r">
-			<p>After Effectsを用いたアニメーションに挑戦した。After Effects講習会で基礎を学び、編集班を中心に編集技術を身につけることができた。</p>
+			<p>坂の頂上からの景色を撮影するために10分間カメラを回した。その映像の速度を速めることで、タイムラプスの映像を制作した。新しい試みだったので、雨上がりや晴れた景色、曇っている景色や角度などを調整し、様々なシーンを手探りで撮影しつつ、綺麗な映像を目指した。</p>
 		</div>
 	</div>
 
@@ -67,4 +67,4 @@
 		<p>©2015 - All right reserved</p>
 	</footer>
 </body>
-</html> 
+</html>
