日本語の修正
坂リメイクの一部に不自然な日本語があったので修正しました

--- a/saka_remake.html
+++ b/saka_remake.html
@@ -50,7 +50,7 @@
 			<img src="img/sakaR_a2.jpg" class="r">
 		</div>
 		<div class="exp r">
-			<p>坂を歩きながら撮影するにあたり、スマートフォンの動画撮影、iphoneのタイムラプス撮影アプリなど様々なツールを試し、最終的には、スタビライザーでの撮影が最適であることにたどり着いた。</p>
+			<p>坂を歩きながら撮影するにあたり、スマートフォンの動画撮影、iphoneのタイムラプス撮影アプリなど様々なツールを試し、最終的には、スタビライザーでの撮影が最適であるという結論にたどり着いた。</p>
 		</div>
 	</div>
 	<div class="point">
