--- a/index.html
+++ b/index.html
@@ -98,10 +98,9 @@
 		<div class="work comming">
 			<!--<a href="denkenbututte.html">-->
 				<img src="img/denkenbututte/top.png">
-				<p><span><!--「伝建物って？」-->Comming Soon</span>
-					<br>伝統的建造物と人</p>
+				<p><span><!--「伝建物って？」-->Coming Soon</span></p>
 			<!--</a>-->
-			<div class="bg"></div>
+			<!--<div class="bg"></div>-->
 		</div>
 	</div>
 
