--- a/saka_remake.html
+++ b/saka_remake.html
@@ -41,7 +41,7 @@
 		<div class="info r">
 			<h1>「坂」Remake</h1>
 			<p class="m_theme">実際に歩いてるような目線で坂を見せる</p>
-			<p>コンセプトは「坂歩き体験」前回つくった「坂」では坂の歴史を紹介したので、今回は坂そのものを見せていきたいと思い、制作を始めた。</p>
+			<p>コンセプトは「坂歩き体験」前回つくった「坂」では坂の歴史を紹介したため、今回は坂そのものを見せていきたいと思い、本映像を制作した。</p>
 		</div>
 	</div>
 	<div class="point">
