--- a/stabilizer.html
+++ b/stabilizer.html
@@ -38,7 +38,7 @@
 		<div class="info r">
 			<h1>スタビライザー</h1>
 			<p class="m_theme">映像のブレをなくす</p>
-			<p>スタビライザーとは、撮影者の手ぶれを軽減する装置です。センサを用いて、ブレとは反対の方向にモーターを動作させることで相殺することができます。この装置を、装置のハード面、ソフトウェア面から制作しました。</p>
+			<p>スタビライザーは、撮影者の手ぶれを軽減する装置。センサを用いて、ブレとは反対の方向にモーターを動作させることで相殺することができる。この装置を、装置のハード面、ソフトウェア面から制作した。</p>
 		</div>
 		<div class="pic l">
 			<img src="img/stabilizer1.JPG" alt="">
@@ -50,7 +50,7 @@
 			<img src="img/stabilizer3.jpg" class="r">
 		</div>
 		<div class="exp r">
-			<p>設計や仕様に関しては、Webサイトを参考にしました。回路が動作することをブレッドボード上で確認し、半田付けをしました。</p>
+			<p>設計や仕様に関しては、Webサイトを参考にした。回路が動作することをブレッドボード上で確認し、半田付けをした。</p>
 		</div>
 	</div>
 
