モバイルレイアウト修正
スタビライザーページにおける画像表示がおかしくなっていたのを修正

--- a/stabilizer.html
+++ b/stabilizer.html
@@ -35,13 +35,13 @@
 	</div>
 	<div class="blank60"></div>
 	<div class="m_main">
+		<div class="pic l">
+			<img src="img/stabilizer1.JPG" class="long">
+		</div>
 		<div class="info r">
 			<h1>スタビライザー</h1>
 			<p class="m_theme">映像のブレをなくす</p>
 			<p>スタビライザーは、撮影者の手ぶれを軽減する装置。センサを用いて、ブレとは反対の方向にモーターを動作させることで相殺することができる。この装置を、装置のハード面、ソフトウェア面から制作した。</p>
-		</div>
-		<div class="pic l">
-			<img src="img/stabilizer1.JPG" alt="">
 		</div>
 	</div>
 	<div class="point">
