TOPからのリンクを作成

--- a/index.html
+++ b/index.html
@@ -95,6 +95,14 @@
 			</a>
 			<div class="bg"></div>
 		</div>
+		<div class="work ">
+			<a href="PV.html">
+				<img src="img/PV.jpg">
+				<p><span>「ハコダテソラカメラ PV」</span>
+					<br>プロジェクトメンバーを紹介する</p>
+			</a>
+			<div class="bg"></div>
+		</div>
 		<div class="work comming">
 			<!--<a href="denkenbututte.html">-->
 				<img src="img/denkenbututte/top.png">
