ページ作成
一部細かい修正もした

--- a/PV.html
+++ b/PV.html
@@ -39,7 +39,7 @@
 			<iframe src="https://www.youtube.com/embed/wyKhs4tWSqo?rel=0&showinfo=0&controls=2&rel=0" frameborder="0" allowfullscreen></iframe>
 		</div>
 		<div class="info r">
-			<h1>「ハコダテソラカメラ PV」</h1>
+			<h1>「SORACAM PV」</h1>
 			<p class="m_theme">プロジェクトメンバーを紹介する</p>
 			<p>コンセプトは「個性が出るPV」。メンバーそれぞれが曲を作り、PV内のBGMとして使用した。製作期間は約３週間で、主にメンバー紹介に重点を置いた。</p>
 		</div>
