--- a/index.html
+++ b/index.html
@@ -98,8 +98,16 @@
 		<div class="work ">
 			<a href="PV.html">
 				<img src="img/PV.jpg">
-				<p><span>「ハコダテソラカメラ PV」</span>
+				<p><span>「SORACAM PV」</span>
 					<br>プロジェクトメンバーを紹介する</p>
+			</a>
+			<div class="bg"></div>
+		</div>
+		<div class="work ">
+			<a href="change.html">
+				<img src="img/change1.jpg">
+				<p><span>「SORACAM 一年間の変遷」</span>
+					<br>活動を振り返る</p>
 			</a>
 			<div class="bg"></div>
 		</div>
