--- a/denkenbututte.html
+++ b/denkenbututte.html
@@ -42,7 +42,7 @@
 		<div class="info r">
 			<h1>「伝建物って？」</h1>
 			<p class="m_theme">建物と人</p>
-			<p>「伝建物って？」は、伝統的建造物とそこに関わる人に着目した映像作品です。函館市の魅力の一部である伝統的建造物がどのような人たちによって守られ活用されているかをドキュメンタリーにしたものです。2人の掛け合いにより物語が進行していきます。</p>
+			<p>コンセプトは「伝統的建造物とそこに関わる人」。函館市の魅力の一部である伝統的建造物がどのような人たちによって守られ活用されているかをドキュメンタリーにしたものです。2人の掛け合いにより物語が進行していきます。</p>
 		</div>
 	</div>
 	<div class="point">
@@ -67,4 +67,4 @@
 		<p>©2015 - All right reserved</p>
 	</footer>
 </body>
-</html> 
+</html>
