伝建物って？の公開

--- a/denkenbututte.html
+++ b/denkenbututte.html
@@ -36,8 +36,7 @@
 	<div class="blank60"></div>
 	<div class="m_main">
 		<div class="video l">
-			<!--<iframe src="https://www.youtube.com/embed/AK7RCwoafu0?rel=0&showinfo=0&controls=2&rel=0" frameborder="0" allowfullscreen></iframe>-->
-			<img src="img/denkenbututte/top.png" class="temp_img">
+			<iframe src="https://www.youtube.com/embed/qS4wN6-DH-A?rel=0&showinfo=0&controls=2" frameborder="0" allowfullscreen></iframe>
 		</div>
 		<div class="info r">
 			<h1>「伝建物って？」</h1>
