--- a/index.html
+++ b/index.html
@@ -111,12 +111,13 @@
 			</a>
 			<div class="bg"></div>
 		</div>
-		<div class="work comming">
-			<!--<a href="denkenbututte.html">-->
+		<div class="work">
+			<a href="denkenbututte.html">
 				<img src="img/denkenbututte/top.png">
-				<p><span><!--「伝建物って？」-->Coming Soon</span></p>
-			<!--</a>-->
-			<!--<div class="bg"></div>-->
+				<p><span>「伝建物って？」</span>
+					<br>建物と人</p>
+			</a>
+			<div class="bg"></div>
 		</div>
 	</div>
 
